# Oilshield

./: README.md
.kiro/specs/oilshield-command-center/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
docs/: SUBMISSION.html  SUBMISSION.md
docs/screenshots/: .gitkeep
oilshield/backend/: .gitignore  Dockerfile  README.md  pyproject.toml
oilshield/backend/app/: __init__.py  main.py
oilshield/backend/app/api/: __init__.py  deps.py  pipeline.py  procurement.py  risk.py  scenarios.py  signals.py
oilshield/backend/app/core/: __init__.py  config.py  constants.py  errors.py
oilshield/backend/app/data/: .gitkeep  corridors.json  procurement_options.json  routes.json  signals.json
oilshield/backend/app/models/: __init__.py  pipeline.py  procurement.py  risk.py  scenario.py  signals.py
oilshield/backend/app/providers/: __init__.py  base.py  datasource.py  factory.py  llm.py  storage.py
oilshield/backend/app/services/: __init__.py  extractor.py  ingestion.py  orchestrator.py  recommender.py  scoring.py  simulator.py
oilshield/backend/tests/unit/: test_errors.py  test_health.py  test_live_providers.py  test_pipeline_router.py  test_procurement_router.py  test_risk_router.py  test_scenarios_router.py  test_signals_router.py
oilshield/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.ts
oilshield/frontend/src/: App.tsx  index.css
oilshield/frontend/src/api/: client.ts  index.ts
oilshield/frontend/src/components/: DashboardShell.tsx  ErrorMessage.tsx  Panel.tsx  (+8 more)
(+8 files in other folders)
